--- a/css/styles.css
+++ b/css/styles.css
@@ -3,12 +3,25 @@ body{
     color: #434455;
     line-height: 24px;
     letter-spacing: 2%;
+    background-color: #ffffff;
 }
 ul {
     list-style: none;
 }
 a{
     text-decoration: none;
+}
+.logo{
+    font-family: "Raleway", sans-serif;
+    font-weight: 700;
+    font-size: 18px;
+    line-height: 1.17;
+    letter-spacing: 0.03em;
+    text-transform: uppercase;
+    color:#4d5ae5;
+}
+.studio{
+    color: #2e2f42;
 }
 .link-nav{
     font-size: 12px;
