--- a/css/styles.css
+++ b/css/styles.css
@@ -104,7 +104,8 @@ color: #434455;
 }
 .team-title{
     font-weight: 500;
-    font-size: 20px
+    font-size: 20px;
+    line-height: 1.2;
     color: #2e2f42;
 }
 .team-text{
@@ -113,10 +114,14 @@ color: #434455;
 .portfolio{
     background-color: #e7e9fc;
 }
-
-.portfolio li {
-    background-color: #ffffff;
+.portfolio-title{
+    font-weight: 500;
+    font-size: 20px;
+    line-height: 1.2;
+    letter-spacing: 0.02em;
+    color: #2e2f42;
 }
+
 .footer{
     background-color: #434455;
 }
