--- a/css/styles.css
+++ b/css/styles.css
@@ -123,5 +123,8 @@ color: #434455;
 }
 
 .footer{
-    background-color: #434455;
+    background-color: #2e2f42;
+}
+.footer-text{
+    color:#F4F4FD;
 }
