--- a/css/styles.css
+++ b/css/styles.css
@@ -91,7 +91,7 @@ color: #434455;
 .team-section {
     background-color: #f4f4fd;
 }
-.team-title{
+.team-main-title{
     font-size: 36px;
     line-height: 1.11;
     text-align: center;
@@ -114,6 +114,13 @@ color: #434455;
 .portfolio{
     background-color: #e7e9fc;
 }
+.portfolio-main-title{
+    font-size: 36px;
+    line-height: 1.11;
+    text-align: center;
+    letter-spacing: 0.02em;
+    color: #2e2f42;
+}
 .portfolio-title{
     font-weight: 500;
     font-size: 20px;
@@ -127,4 +134,7 @@ color: #434455;
 }
 .footer-text{
     color:#F4F4FD;
+}
+.studio-footer{
+    color: #f4f4fd;
 }
