--- a/css/styles.css
+++ b/css/styles.css
@@ -106,6 +106,7 @@ color: #434455;
     font-weight: 500;
     font-size: 20px;
     line-height: 1.2;
+    letter-spacing: 0.02em;
     color: #2e2f42;
 }
 .team-text{
